--- a/css/style.css
+++ b/css/style.css
@@ -552,43 +552,48 @@ address {
 }
 
 .navigation-cont-a {
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 300ms;
-          transition-duration: 300ms;
-  -webkit-transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
-          transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
-  -webkit-transition-delay: 10ms;
-          transition-delay: 10ms;
-  text-decoration: none;
   color: #212121;
   position: relative;
 }
 
+@media screen and (min-width: 768px) {
+  .navigation-cont-a {
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 300ms;
+            transition-duration: 300ms;
+    -webkit-transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
+            transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
+    -webkit-transition-delay: 10ms;
+            transition-delay: 10ms;
+    text-decoration: none;
+  }
+}
 .navigation-cont-a:hover {
   color: #2196F3;
   cursor: pointer;
 }
 
-.navigation-cont-a::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 44px;
-  left: 0;
-  height: 4px;
-  border-radius: 4px;
-  background-color: inherit;
-  -webkit-transition-property: background-color, width;
-  transition-property: background-color, width;
-  -webkit-transition-duration: 500ms;
-          transition-duration: 500ms;
-  -webkit-transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
-          transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
-  -webkit-transition-delay: 10ms;
-          transition-delay: 10ms;
+@media screen and (min-width: 768px) {
+  .navigation-cont-a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 44px;
+    left: 0;
+    height: 4px;
+    border-radius: 4px;
+    background-color: inherit;
+    -webkit-transition-property: background-color, width;
+    transition-property: background-color, width;
+    -webkit-transition-duration: 500ms;
+            transition-duration: 500ms;
+    -webkit-transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
+            transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
+    -webkit-transition-delay: 10ms;
+            transition-delay: 10ms;
+  }
 }
-
 a:hover::after {
   width: 100%;
   background-color: #2196F3;
@@ -627,13 +632,42 @@ a:hover::after {
       -ms-flex-align: center;
           align-items: center;
   height: 80px;
-  gap: 95px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
+@media screen and (min-width: 768px) {
+  .main-nav {
+    gap: 85px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    gap: 95px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
 .main-nav-child {
-  opacity: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
+@media screen and (max-width: 767px) {
+  .main-nav-child {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-nav-child {
+    gap: 95px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .main-nav-child {
     display: -webkit-box;
@@ -684,6 +718,18 @@ a:hover::after {
           align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .connection {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .connection {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .connection-el {
   font-family: "Roboto";
   font-weight: 500;
@@ -752,6 +798,164 @@ a:hover::after {
 }
 .connection-el:hover .info-el {
   fill: #2196F3;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+.menu-toggle > svg {
+  fill: #000;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+  #mobile-menu {
+    display: none;
+  }
+}
+.menu-toggle:hover, .menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #FFFFFF;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.mobile-menu-el {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 30px;
+  padding-bottom: 300px;
+}
+
+.link {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: #212121;
+  text-decoration: none;
+  text-align: left;
+}
+
+.link:hover {
+  color: #2196F3;
+  cursor: pointer;
+}
+
+.mobile-menu-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 30px;
+  padding-bottom: 65px;
+}
+.mobile-menu-item > li {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+  text-align: left;
+}
+.mobile-menu-item > li:hover {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+  text-decoration: none;
+  text-align: left;
+}
+
+.social-networks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  gap: 20px;
+}
+.social-networks > li {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+  text-decoration: none;
+  text-align: left;
 }
 
 .hero {
@@ -833,6 +1037,20 @@ a:hover::after {
           align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .svg-cont {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 @media screen and (min-width: 1200px) {
   .svg-cont {
     display: -webkit-box;
@@ -886,17 +1104,38 @@ a:hover::after {
   text-decoration: none;
   text-align: left;
   background-color: #FFFFFF;
+  width: 450px;
 }
 
+@media screen and (min-width: 768px) {
+  .svg-subtitle {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .svg-subtitle {
+    width: 270px;
+  }
+}
 .svg-cont-el::before {
   display: block;
   content: "";
-  width: 270px;
+  width: 450px;
   height: 120px;
   border-radius: 3px;
   background-color: #F5F4FA;
 }
 
+@media screen and (min-width: 768px) {
+  .svg-cont-el::before {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .svg-cont-el::before {
+    width: 270px;
+  }
+}
 .svg-cont-el:first-child::before {
   background-image: url(../img/antenna.svg);
   background-repeat: no-repeat;
@@ -1028,16 +1267,22 @@ a:hover::after {
 
 .modal {
   position: absolute;
-  top: 20%;
-  left: 36%;
+  top: 15%;
+  left: 3%;
   background-color: #FFFFFF;
-  min-width: 450px;
-  min-height: 609px;
+  width: 450px;
+  height: 609px;
   -webkit-transform: translate(-50% -50%);
           transform: translate(-50% -50%);
   padding: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .modal {
+    top: 20%;
+    left: 20%;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
     top: 20%;
@@ -1059,8 +1304,15 @@ a:hover::after {
   color: #000;
   text-decoration: none;
   text-align: center;
+  width: 370px;
+  margin: 0 auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-name {
+    width: auto;
+  }
+}
 .modal-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1100,13 +1352,18 @@ a:hover::after {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 40px;
-  width: 447px;
+  width: 370px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
   margin-top: 5px;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-form-el {
+    width: 447px;
+  }
+}
 .modal-form-el:focus {
   color: #2196F3;
   outline: 1px solid #2196F3;
@@ -1128,13 +1385,20 @@ a:hover::after {
 #modal-comm {
   margin: 0 auto;
   height: 120px;
-  width: 447px;
+  width: 379px;
   padding-left: 15px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 15px;
+  padding-top: 10px;
 }
 
+@media screen and (min-width: 1200px) {
+  #modal-comm {
+    padding-top: 0;
+    width: 447px;
+  }
+}
 #checkbox-link {
   color: #2196F3;
   text-decoration: underline;
@@ -1144,8 +1408,8 @@ a:hover::after {
 .m-f-checkbox {
   font-family: "Roboto";
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 13px;
+  line-height: 14px;
   letter-spacing: 0.03em;
   color: rgb(117, 117, 117);
   text-decoration: none;
@@ -1153,6 +1417,18 @@ a:hover::after {
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1200px) {
+  .m-f-checkbox {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: rgb(117, 117, 117);
+    text-decoration: none;
+    text-align: left;
+  }
+}
 .modal-form > button {
   font-family: "Roboto";
   font-weight: 700;
@@ -1173,7 +1449,7 @@ a:hover::after {
 }
 
 .modal-btn {
-  margin-left: 470px;
+  margin-left: 93%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   background-color: #FFFFFF;
   width: 30px;
@@ -1181,6 +1457,11 @@ a:hover::after {
   border-radius: 50%;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-btn {
+    margin-left: 470px;
+  }
+}
 .X {
   -webkit-transition-property: fill;
   transition-property: fill;
@@ -1201,7 +1482,7 @@ a:hover::after {
 
 .background-foot {
   background-color: #2F303A;
-  height: 603px;
+  height: 610px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1259,12 +1540,19 @@ address {
   text-decoration: none;
   text-align: center;
   padding: 10px 0;
-  margin: 34%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 1200px) {
   .logo-foot {
-    margin: 0 0;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
   }
 }
 .join-help-div {
@@ -1279,7 +1567,7 @@ address {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 40px;
+  gap: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1309,9 +1597,20 @@ address {
   display: flex;
   gap: 10px;
   margin-bottom: 45px;
-  margin-left: 31px;
+  margin-right: 140px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .join-cont {
+    margin-left: 31px;
+    -webkit-box-pack: baseline;
+        -ms-flex-pack: baseline;
+            justify-content: baseline;
+  }
+}
 .join {
   fill: #FFFFFF;
   margin-top: 11px;
@@ -1393,23 +1692,18 @@ address {
 }
 
 .input-div {
-  margin-left: 30px;
   display: block;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
-  .input-button-box {
+  .input-div {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
   }
 }
 .email-txt {
@@ -1422,7 +1716,6 @@ address {
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  margin-left: -10%;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1443,8 +1736,19 @@ address {
   border-radius: 3px;
   padding: 10px 20px;
   background-color: inherit;
+  width: 420px;
+  margin-bottom: 20px;
 }
 
+@media screen and (min-width: 1200px) {
+  .email-input {
+    margin-bottom: 0px;
+    border: 1px solid #757575;
+    border-radius: 3px;
+    padding: 10px 20px;
+    background-color: inherit;
+  }
+}
 .email-btn {
   font-family: "Roboto";
   font-weight: 700;
@@ -1522,7 +1826,7 @@ address {
 }
 
 @media screen and (min-width: 768px) {
-  .regulars-logoli {
+  .regulars-logo > li {
     width: calc((100% - 60px) / 3);
   }
 }
@@ -1562,6 +1866,12 @@ address {
   padding-top: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .background-div {
+    height: 1285px;
+    padding-top: 50px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .background-div {
     height: 710px;
@@ -1589,11 +1899,28 @@ address {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 30px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
+@media screen and (min-width: 768px) {
+  .team-list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 @media screen and (min-width: 1200px) {
   .team-list {
     -webkit-box-orient: horizontal;
@@ -1646,6 +1973,12 @@ address {
   height: 460px;
 }
 
+@media screen and (min-width: 768px) {
+  .people-pic {
+    width: 354px;
+    height: 374px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .people-pic {
     width: 270px;
