--- a/sass/componentsWS/_svg-sec.scss
+++ b/sass/componentsWS/_svg-sec.scss
@@ -37,10 +37,10 @@
     transition-delay: 10ms;
 }
 @media screen and (min-width:768px){
-    .regulars-logo{
-        &li{
+    .regulars-logo>li{
+      
             width: calc((100% - 60px)/3);
-        }
+        
     }
 }
 @media screen and (min-width:1200px){
