--- a/sass/componentsWS/_team.scss
+++ b/sass/componentsWS/_team.scss
@@ -3,6 +3,12 @@
     height: 2770px;
     padding-top: 30px;
 }
+@media screen and (min-width:768px){
+    .background-div{
+        height: 1285px;
+        padding-top: 50px;
+    }
+}
 @media screen and (min-width:1200px){
     .background-div{
         height: 710px;
@@ -17,10 +23,18 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    align-items: center;
     justify-content: space-between;
 }
+@media screen and (min-width:768px){
+    .team-list{
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 30px;
+        justify-content: center;
+    }
+}   
 @media screen and (min-width:1200px){
-
 .team-list{
     flex-direction: row;
     justify-content: space-between;
@@ -46,6 +60,12 @@
 .people-pic{
     width: 450px;
     height: 460px;
+}
+@media screen and (min-width:768px){
+    .people-pic{
+        width: 354px;
+    height: 374px;
+    }
 }
 @media screen and (min-width:1200px){
     .people-pic{
