--- a/sass/componentsP/_applications.scss
+++ b/sass/componentsP/_applications.scss
@@ -1,14 +1,22 @@
 .applications{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     gap: 8px;
     margin-top: 95px;
     margin-bottom: 50px;
+    width: 340px;
+    flex-wrap: wrap;
+    margin: 95px auto 50px auto;
+}
+@media screen and (min-width: 768px){
+    .applications{
+        width: 604px;
+    }
 }
 
 .applications-btn{
     @include txt($font-f: 'Roboto', $font-w: 500, $font-s: 16px, $line-h: 26px, $lett-s:0.03em, $color:$fourth-color,  $txt-decor:none, $txt-align:center); 
-    background-color: var(--second-color);
+    background-color: $second-color;
     padding: 4px;
     border: none;
     border-radius: 5px;
@@ -18,9 +26,10 @@
     transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
     transition-delay: 10ms;
     &:hover{
-        background-color: var(--hover-color);
-        color: var(--third-color);
+        background-color: $hover-color;
+        color: $third-color;
         cursor:pointer;
-        box-shadow: 0px 3px 4px var(--fifth-color);
+        box-shadow: 0px 3px 4px $fifth-color;
     }
 }
+
