--- a/sass/componentsP/_header.scss
+++ b/sass/componentsP/_header.scss
@@ -1,81 +1,119 @@
 .porftolio-header{
-    border-bottom: solid 1px #ECECEC;
+    border-bottom: 1px solid #ececec;
+}
+.navigation-cont-a{
+
+    color: $fourth-color;
+    position: relative;
+}
+@media screen and (min-width:768px){
+    .navigation-cont-a{
+        transition-property: color ;
+        transition-duration: 300ms;
+        transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
+        transition-delay: 10ms;
+        text-decoration: none;
+    }
+}
+
+
+.navigation-cont-a:hover{
+    color: $hover-color;
+    cursor: pointer;
+}
+
+@media screen and (min-width:768px){
+    .navigation-cont-a::after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 44px;
+        left: 0;
+        height: 4px;
+        border-radius: 4px;
+        background-color: inherit;
+        transition-property:background-color, width ;
+        transition-duration: 500ms;
+        transition-timing-function:cubic-bezier(0.83, -0.08, 0.32, 1) ;
+        transition-delay: 10ms;
+    }
+}
+
+a:hover::after{
+    width: 100%;
+    background-color:$hover-color;
+}
+
+.navigation-cont-el{
+    display: flex;
+    flex-direction: column;
+}
+.main-logo{
+
+    @include txt($font-f:'Raleway', $font-w: 700, $font-s: 26px, $line-h: 31px, $lett-s: 0.03px, $color:#000,  $txt-decor:none, $txt-align:left);
+   
+}
+
+.Web{
+    color: $hover-color;
 }
 .main-nav{
     display:flex;  
     align-items: center;
     height: 80px;
-    gap: 95px;
+    justify-content: space-between;
+    
+   
 }
+@media screen and (min-width:768px){
+    .main-nav{
+        gap: 85px;
+        justify-content: center;
+
+    }
+}
+@media screen and (min-width:1200px){
+    .main-nav{
+        gap: 95px;
+        justify-content: space-around;
+    }
+}
+
+
+
 .main-nav-child{
     display: flex;
+}
+
+
+@media screen and (max-width:767px){
+    .main-nav-child{
+        display: none;
+    }
+}
+@media screen and (min-width:768px){
+    .main-nav-child{
+        gap: 95px;
+    }
+    
+}
+@media screen and (min-width:1200px) {
+    .main-nav-child{
+        display: flex;
     justify-content: space-between;
     gap: 310px;
     margin: 0;
     padding: 0;
+    opacity: 1;
+    }
 }
-.main-logo{
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    text-decoration: none;
-    color: #000;
-    text-align: left;
-}
-.main-nav-child{
-    display: flex;
-    justify-content: space-between;
-    gap: 310px;
-    margin: 0;
-    padding: 0;
-}
-.navigation-cont-a{
-    transition-property: color ;
-    transition-duration: 300ms;
-    transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
-    transition-delay: 10ms;
-    text-decoration: none;
-    color: var(--fourth-color);
-    position: relative;
-}
-.navigation-cont-a:hover{
-    color: var(--hover-color);
-    cursor: pointer;
-}
-.navigation-cont-a::after{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 44px;
-    left: 0;
-    height: 4px;
-    border-radius: 4px;
-    background-color: inherit;
-    transition-property:background-color, width ;
-    transition-duration: 500ms;
-    transition-timing-function:cubic-bezier(0.83, -0.08, 0.32, 1) ;
-    transition-delay: 10ms;
-}
-a:hover::after{
-    width: 100%;
-    background-color: var(--hover-color);
-}
-.navigation-cont-el{
-    display: flex;
-    flex-direction: column;
-}
+
 .navigation-cont{
-    @include txt($font-f:'Roboto', $font-w: 500, $font-s:  14px, $line-h: 16px, $lett-s: 0.02em, $color: $fourth-color,  $txt-decor:none, $txt-align:left);
+    @include txt($font-f:'Roboto', $font-w: 500, $font-s:  14px, $line-h: 16px, $lett-s: 0.02em, $color: $fourth-color,  $txt-decor: none, $txt-align:left);
     display: flex;
     gap: 40px;
     align-items: center;
-    justify-content: space-around;   
-}
-.navigation-cont-el{
-    display: flex;
-    flex-direction: column;
+    justify-content: space-around;
 }
 .connection-el>a{
     display: flex;
@@ -85,36 +123,27 @@ a:hover::after{
     gap: 50px;
     align-items: center;
 }
+@media screen and (min-width:768px){
+    .connection{
+        display: block;
+    }
+}
+@media screen and (min-width:1200px){
+    .connection{
+        display: flex;
+    }
+}
+
 .connection-el{
     @include txt($font-f: 'Roboto', $font-w: 500, $font-s: 14px, $line-h: 16px, $lett-s:0.02em, $color:$fourth-color,  $txt-decor:none, $txt-align:left);
     gap: 10px;
    display: flex;
-   
 }
 .connection-el>a{
     transition-property:color ;
     transition-duration: 300ms;
     transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
     transition-delay: 10ms;
-}
-.connection-el:hover{
-    color: var(--fourth-color);
-    >a{
-        color: var(--hover-color);
-    }
-.info-el{
-    fill: var(--hover-color);}
-}
-.connection-el{
-    @include txt($font-f: 'Roboto', $font-w: 500, $font-s: 14px, $line-h: 16px, $lett-s:0.02em, $color:$fourth-color,  $txt-decor:none, $txt-align:left);
-    gap: 10px;
-    display: flex;
-}
-.connection-el:hover{
-    color: var(--fourth-color);
-    
-.info-el{
-    fill: var(--hover-color);}
 }
 .info-el{
     fill:  rgba(117, 117, 117, 1);
@@ -123,4 +152,114 @@ a:hover::after{
     transition-timing-function: cubic-bezier(0.83, -0.08, 0.32, 1);
     transition-delay: 10ms;
     
+}
+.connection-el:hover{
+    color: $fourth-color;
+    >a{
+        color: $hover-color;
+    }
+.info-el{
+    fill: $hover-color;}
+}
+.connection-el{
+    @include txt($font-f: 'Roboto', $font-w: 500, $font-s: 14px, $line-h: 16px, $lett-s:0.02em, $color:$fourth-color,  $txt-decor:none, $txt-align:left);
+    gap: 10px;
+    display: flex;
+}
+.connection-el:hover{
+    color: $fourth-color;
+    
+.info-el{
+    fill: $hover-color;}
+}
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    margin: 0; 
+    padding: 0;
+    background-color:   
+    transparent;
+    cursor: pointer; 
+     border: none;
+    border-radius: 50%; 
+     outline: none;
+     >svg{
+        fill: #000;
+    }
+    }
+    @media screen and (min-width:768px){ 
+         .menu-toggle {
+          display: none;
+        }
+        #mobile-menu{
+            display: none;
+        }
+      }
+
+.menu-toggle:hover,.menu-toggle:focus {
+      background-color: rgba(0, 0, 0, 0.1);}
+.menu-container {
+      position: fixed; 
+       top: 0;
+      left: 0; 
+       width: 100vw;
+      height: 100vh; 
+       padding: 32px;
+      background-color: $third-color;
+        z-index: 999;
+      transform: translateX(100%);
+      transition: transform 250ms ease-in-out;}
+.menu-container.is-open {
+      transform: translateX(0);}
+      .menu-container .menu-toggle {
+      position: absolute;  
+      top: 16px;
+      right: 16px;
+      color: #fff;}
+.mobile-menu {
+      padding: 0; 
+       margin: 0;
+       display: flex;
+       flex-direction: column;
+    }
+
+    .mobile-menu-el{
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        row-gap: 30px;
+        padding-bottom: 300px;
+    }
+.link{
+    @include txt($font-f:'Roboto', $font-w: 500, $font-s:  40px, $line-h: 47px, $lett-s: 0.02em, $color: $fourth-color,  $txt-decor: none, $txt-align:left);
+
+}
+.link:hover{
+    color: $hover-color;
+    cursor: pointer;
+}
+.mobile-menu-item{
+display: flex;
+flex-direction: column;
+row-gap: 30px;
+padding-bottom: 65px;
+    >li{
+    @include txt($font-f:'Roboto', $font-w: 500, $font-s:  24px, $line-h: 28px, $lett-s: 0.02em, $color: $fifth-color,  $txt-decor: none, $txt-align:left);
+    &:hover{
+        @include txt($font-f:'Roboto', $font-w: 500, $font-s:  34px, $line-h: 40px, $lett-s: 0.02em, $color: $hover-color,  $txt-decor: none, $txt-align:left);
+  
+    }
+}
+}
+.social-networks{
+    display: flex;
+    align-items: baseline;
+    gap: 20px;
+    >li{
+        @include txt($font-f:'Roboto', $font-w: 500, $font-s:  18px, $line-h: 22px, $lett-s: 0.02em, $color: $hover-color,  $txt-decor: none, $txt-align:left);
+        
+    }
 }
