--- a/sass/componentsWS/_main-sec.scss
+++ b/sass/componentsWS/_main-sec.scss
@@ -207,24 +207,24 @@ padding-top: 23px;
 }
 .modal{
     position: absolute;
-    top: 15%;
-    left: 3%;
+    top: 50%;
+    left: 50%;
     background-color:$third-color;
     width: 450px;
     height: 609px;
-    transform: translate(-50% -50%);
+    transform: translate(-50%, -50%);
     padding: 15px;
 }
-@media screen and (min-width:768px){
-    .modal{
-    top: 20%;
-    left: 20%;
-    }
-}
+// @media screen and (min-width:768px){
+//     .modal{
+//     top: 20%;
+//     left: 22%;
+//     }
+// }
 @media screen and (min-width:1200px){
     .modal{
-        top: 20%;
-        left: 36%;
+        // top: 20%;
+        // left: 36%;
         min-width: 528px;
         min-height: 581px;
     }
